<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/server"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/serItems"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:layout_weight="0.5"
                android:id="@+id/eUsername"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:layout_weight="0.5"
                android:id="@+id/ePassword"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_weight="0.5"
                android:id="@+id/login"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:layout_weight="0.5"
                android:id="@+id/cancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>